# nevernote

./: .gitignore  Cargo.toml  Rocket.toml  gulpfile.js  install.sql  package-lock.json
private/css/: index.scss
private/js/: index.js
public/: index.html
public/css/: index.css
public/js/: index.js
src/: main.rs
